formatted screening forms

--- a/omod/src/main/webapp/resources/htmlforms/hiv/alcoholAndDrugAbuseScreening.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/alcoholAndDrugAbuseScreening.html
@@ -40,7 +40,7 @@
 				<table id="alcohol-screening-questions">
 					<obsgroup groupingConceptId="158728AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA">
 						<tr>
-							<td>1. How often do you have a drink containing alcohol?  &#160;&#160;&#160;&#160;<br />
+							<td><b>1. How often do you have a drink containing alcohol?</b>  &#160;&#160;&#160;&#160;<br />
 							<obs conceptId="159449AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 									 answerConceptIds="1090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
 									                   1091AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,
@@ -58,7 +58,7 @@
 						<tr>
 							<td>
 								<br />
-								2. How often do you smoke?  &#160;&#160;&#160;&#160;<br />
+								<b>2. How often do you smoke?</b>  &#160;&#160;&#160;&#160;<br />
 								<obs conceptId="163201AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" "
 									 answerConceptIds="1090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,156358AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163197AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163196AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163195AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163200AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio"
 									 answerLabels="Never smoked,Former cigarette smoker,Current some day smoker,Current light tobacco smoker,Current heavy tobacco smoker,Unknown if ever smoked"  answerSeparator="&lt;br /&gt;"/>
@@ -66,7 +66,7 @@
 						</tr>
 						<tr>
 						<td><br />
-							3. How often do you use drugs?  &#160;&#160;&#160;&#160;<br />
+							<b>3. How often do you use drugs?</b>  &#160;&#160;&#160;&#160;<br />
 								<obs conceptId="112603AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" labelText=" "
 									 answerConceptIds="1090AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1091AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1092AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1093AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1094AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="radio"
 									 answerLabels="Never,Monthly or less,2 to 4 times a month,2 to 3 times a week,4 or More Times a Week"  answerSeparator="&lt;br /&gt;"/>
