Added pregnancy and breastfeeding in stability table Greencard, styled enhanced adherence

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -91,7 +91,11 @@ Green Card follow-up visit form
         var LDL_RESULT = GREENCARD_VELOCITY.split(",")[7].split(":")[1];
         var IPT_COMPLETED = GREENCARD_VELOCITY.split(",")[8].split(":")[1];
         var GOOD_ADHERENCE = GREENCARD_VELOCITY.split(",")[9].split(":")[1];
-        //var PATIENT_DUE_TB_ENROLLMENT = GREENCARD_VELOCITY.split(",")[2].split(":")[1];
+        var PATIENT_PREGNANT = GREENCARD_VELOCITY.split(",")[10].split(":")[1];
+        var PATIENT_BREASTFEEDING = GREENCARD_VELOCITY.split(",")[11].split(":")[1];
+
+        console.log("PATIENT_PREGNANT ==>"+PATIENT_PREGNANT);
+        console.log("PATIENT_BREASTFEEDING ==>"+PATIENT_BREASTFEEDING);
 
         var pAge = parseInt('<lookup expression="patient.age"/>');
         var pgender = "<lookup expression="patient.gender" />";
@@ -640,7 +644,18 @@ function recordedStabilityAssessmentIndicators() {
     }else{
         jq('#ipt-completion:text').val("NO");
     }
-
+    //7. pregnant
+    if(PATIENT_PREGNANT == 'true') {
+        jq('#pregnant:text').val("YES");
+    }else{
+        jq('#pregnant:text').val("NO");
+    }
+    //7. breast feeding
+    if(PATIENT_BREASTFEEDING == 'true') {
+        jq('#breast-feeding:text').val("YES");
+    }else{
+        jq('#breast-feeding:text').val("NO");
+    }
 }
 function onLmpChange() {
     jq('#pregnancyOption :input').prop('disabled', false);
@@ -3717,7 +3732,7 @@ beforeSubmit.push(function() {
                                                     <input type="text" name="current-regimen-stability" id="current-regimen-stability" readonly="True" />
                                                    </td>
                                                 <td>
-                                                    Duration of current regimen (Days):  &#160;&#160;
+                                                    Duration of current regimen (Months):  &#160;&#160;
                                                     <input type="text" name="current-regimen-duration" id="current-regimen-duration" readonly="True" />
                                                     </td>
                                             </tr>
@@ -3731,17 +3746,30 @@ beforeSubmit.push(function() {
                                             <input type="text" name="vl-value" id="vl-value" readonly="True" />
                                             </td>
                                         </tr>
-                                        <tr>
-                                            <td>
-                                                Good adherence in the last 6 months :
-                                                <input type="text" name="good-adherence" id="good-adherence" readonly="True" />
+                                    <tr>
+                                        <td>
+                                            Good adherence in the last 6 months :
+                                            <input type="text" name="good-adherence" id="good-adherence" readonly="True" />
 
-                                                </td>
-                                            <td>
+                                        </td>
+                                        <td>
                                             Completed 6 months IPT:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                                             <input type="text" name="ipt-completion" id="ipt-completion" readonly="True" />
-                                                </td>
-                                           </tr>
+                                        </td>
+                                    </tr>
+                                    <includeIf velocityTest="$patient.gender == 'F'">
+                                    <tr>
+                                        <td>
+                                            Pregnant :
+                                            <input type="text" name="pregnant" id="pregnant" readonly="True" />
+
+                                        </td>
+                                        <td>
+                                            Breast feeding:&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                                            <input type="text" name="breast-feeding" id="breast-feeding" readonly="True" />
+                                        </td>
+                                    </tr>
+                                    </includeIf>
                                         </td>
                                     </tr>
                                 </table>
